--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "bugs": {
     "url": "https://github.com/Sharlaan/pokecheck/issues"
   },
-  "homepage": "http://pokecheck2.surge.sh",
+  "homepage": "https://pokecheck2.surge.sh",
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "^0.8.3",
+    "react-scripts": "^0.8.4",
     "standard": "^8.6.0"
   },
   "dependencies": {
@@ -45,7 +45,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "deploy": "npm run build  &&  surge -p build -d pokecheck2.surge.sh",
+    "deploy": "npm run build  &&  surge -p build -d https://pokecheck2.surge.sh",
     "stats": "webpack --profile --json > stats.json",
     "lint": "eslint src",
     "eject": "react-scripts eject"
